# framos-nxp-vis-tool

./: CMakeLists.txt  README.md  README_old.md  controls.hpp  display_image  display_image.cpp
config/: config.json  raw_cpu_config.json  raw_gpu_config.json
include/: buffers.hpp  image_processor.hpp  ioctl_cmds.h  v4l2_subdevice_controls.hpp  viv_controls.hpp
src/: buffers.cpp  display_image.cpp  image_processor.cpp  v4l2_subdevice_controls.cpp  viv_controls.cpp
tool/: analyze_raw.py  frame.raw
